# gravitation

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  makefile  pyproject.toml  setup.cfg  setup.py
demo/: benchmark.html  benchmark_long.json  benchmark_short.json
docs/: __init__.py
docs/source/: __init__.py  about.rst  api.rst  bugs.rst  cli.rst  conf.py  existing.rst  faq.rst  index.rst  installation.rst  pointmass.rst  support.rst  sysreq.rst  universebase.rst  version.py  wishlist.rst  workflow.rst
src/gravitation/: __init__.py
src/gravitation/cli/: __init__.py  _kernel.py  _main.py  _main_.py  analyze.py  benchmark.py  ingest.py  plot.py  runtime.py  verify.py  view.py  worker.py
src/gravitation/cli/realtimeview/: __init__.py  backend_pygame.py
src/gravitation/kernel/: __init__.py  _base.py  _base_.py  _shm.py  c1a.py  c4a.py  c4b.py  cc1.py  cc2.py  cp1.py  cp2.py  nb1.py  nb2.py  ne1.py  np1.py  np2.py  np2b.py  np2c.py  np3.py  np4.py  np_p1.py  np_p2.py  np_p3.py  pc1.py  pc2.py  pc3.py  py1.py  py2.py  py3.py  torch1.py
src/gravitation/kernel/_OLD/: c1a.py  c4a.py  c4b.py  nb1.py  ne1.py  np1.py  np2.py  np3.py  np4.py  pc1.py  pc3.py  torch1.py
src/gravitation/kernel/_OLD/_lib4_/: setup.py
src/gravitation/kernel/_OLD/cy1/: setup.py
src/gravitation/kernel/_OLD/cy2/: setup.py  wrapper.py
src/gravitation/kernel/_OLD/cy4/: core.pyx  setup.py  wrapper.py
src/gravitation/kernel/_OLD/js1/: __init__.py  wrapper.py
src/gravitation/kernel/_OLD/oc1/: __init__.py  wrapper.py
src/gravitation/kernel/_OLD/oc4/: step_stage1.m
src/gravitation/kernel/_TMP/cc1/: __init__.py
src/gravitation/kernel/_TMP/cc3/: kernel.py
src/gravitation/kernel/_TMP/np1/: __init__.py
src/gravitation/kernel/_TMP/np2/: kernel.py
src/gravitation/kernel/_TMP/np3/: kernel.py
src/gravitation/kernel/_TMP/np_p1/: __init__.py
src/gravitation/kernel/_TMP/np_p3/: __init__.py  kernel.py
src/gravitation/kernel/_lib1_/: lib.c
src/gravitation/kernel/_lib4_/: lib.c
src/gravitation/kernel/_libcc1/: lib.c
src/gravitation/kernel/_libcc2/: lib.c
src/gravitation/kernel/_libcc3/: lib.c
src/gravitation/kernel/cc1/: kernel.py  lib.c  meta.py  setup.py
src/gravitation/kernel/cc2/: __init__.py  kernel.py  lib.c  meta.py  setup.py
src/gravitation/kernel/cc3/: __init__.py  kernel.py  lib.c  meta.py  setup.py
src/gravitation/kernel/cy1/: __init__.py  core.pyx
src/gravitation/kernel/cy2/: __init__.py  core.pyx  wrapper.py
src/gravitation/kernel/cy4/: __init__.py  core.pyx  wrapper.py
src/gravitation/kernel/js1/: __init__.py  core.js  wrapper.py
src/gravitation/kernel/nb3/: __init__.py  kernel.py  meta.py
src/gravitation/kernel/np1/: kernel.py
src/gravitation/kernel/np2/: __init__.py  kernel.py
src/gravitation/kernel/np3/: __init__.py  kernel.py
src/gravitation/kernel/np_p1/: kernel.py
src/gravitation/kernel/np_p2/: __init__.py  kernel.py
src/gravitation/kernel/np_p3/: kernel.py
src/gravitation/kernel/oc1/: __init__.py  step_stage1.m  wrapper.py
src/gravitation/kernel/oc4/: __init__.py  step_stage1.m  wrapper.py
src/gravitation/kernel/pc1/: __init__.py  kernel.py
src/gravitation/kernel/py1/: __init__.py  kernel.py  meta.py
src/gravitation/kernel/py2/: kernel.py
src/gravitation/kernel/py3/: __init__.py  kernel.py
src/gravitation/lib/: __init__.py  base.py  baseuniverse.py  baseviewer.py  benchmark.py  block.py  const.py  debug.py  errors.py  kernel.py  load.py  logbenchmark.py  logging.py  loginfo.py  logiteration.py  logsession.py  logstep.py  logworker.py  mass.py  option.py  platform.py  proc.py  shm.py  simulation.py  timing.py  variation.py  verification.py  view.py  worker.py  zerouniverse.py
src/gravitation/view/: __init__.py  pygame.py  vispy.py
src/gravitation/view/pygame/: __init__.py  view.py
src/gravitation/view/vispy/: __init__.py  view.py
(+4 files in other folders)
