[build-system]
requires = ["setuptools", "wheel", "Cython"]

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.cache
  | \.hypothesis
  | \.ipynb_checkpoints
  | \.pytest_cache
  | .ropenproject
  | _build
  | build
  | buck-out
  | demo_dll
  | dist
  | env[0-9]{2}
  | env
)/
'''
